--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ numpy==1.26.2
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.2
+Pillow==10.1.0
 protobuf==4.23.4
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
